Bug 75307 - Character format dialog, Position - Subscript/Superscript uses wrong relative size (1%) in Writer/Impress
Summary: Character format dialog, Position - Subscript/Superscript uses wrong relative...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: regression
: 74940 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-21 09:22 UTC by dommac
Modified: 2023-04-12 14:13 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dommac 2014-02-21 09:22:23 UTC
in writer Formatting->Character->position dialog (Formato->Carattere->Posizione in Italian) if you select "upper" or "lower" (Apice or Pedice) default values for "increment" and "relative dimension" ("Aumenta/riduci" and "Dim. caratt. relativa") are set to 1%, values that makes "disappear" any string you try to format with and an absent-minded user would take it as a bug.
The same in impress, too (but not in Calc).

regards,
mimmo
Comment 1 sophie 2014-02-26 16:21:13 UTC
Confirmed, default value in relative size field is set to 1% when it should be 58% (as it was in 4.1.5.3). 
Version: 4.2.1.1
Build ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b Ubuntu 13.10.
Change plateform, add regression keyword, set to New - Sophie
Comment 2 Björn Michaelsen 2014-03-07 20:11:23 UTC
Hmmm, I cannot reproduce this on 4.2.2~rc1 from PPA for Ubuntu 13.10 with a fresh profile:
1/ Select word
2/ go to Formatting->Character->position

As expected:
- Normal is locked at "1%" raise/lower, "100%" relative font size
- Superscript is at 33%/58%
- Subscript is at 33%/58%

What exactly is needed to reproduce this?
Comment 3 Michael Stahl (allotropia) 2014-03-13 14:57:54 UTC
i can reproduce this on Linux...
in current master and libreoffice-4-2 when running from instdir.

but running anything unpacked from "archive" instset,
even current master, there is no bug!

very mysterious (also makes it hard to bibisect it)
Comment 4 bach_leipzig 2014-03-29 11:41:18 UTC
I can confirm this on LO Linux 4.2.2.1 (Ubuntu 12.04). The superscript dialog was initially set at 1% and for me, even when I manually change it, it makes no difference in the result. When I superscript something, all the characters disappear. "Automatic" checked or not makes no difference either. Superscript/Subscript appear to be essentially unusable.

I might add that it does display correctly when I copy something in off the clipboard that contains superscript characters.
Comment 5 Caolán McNamara 2014-04-02 13:54:07 UTC
I can reproduce it, I believe it is getting loaded from your ~/registrymodifications.xcu as user data, I have it as "1;16;0;0" in there and there are others as "1;16" so presumably an id collision where some other dialogs userdata is read.
Comment 6 Commit Notification 2014-04-02 14:20:38 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5b9db43080658201caf07cd646bae4f4f2acc95

Resolves: fdo#75307 discard invalid user data



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-04-02 15:18:47 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6fa98a08f2f4b57b660fc39542a9ceb20779d769

Related: fdo#75307 use the unique auto help id to identify tabpages



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-04-02 15:45:26 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63dd47aed73a502bfbf3b490bd8b9f26528fdfc0&h=libreoffice-4-2

Resolves: fdo#75307 discard invalid user data


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Jean-Baptiste Faure 2014-04-02 18:03:23 UTC
*** Bug 74940 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2014-04-03 11:19:12 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=333282478a956709e648427b412d90f90fc1437b

Related: fdo#75307 use the unique auto help id to identify tabpages



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.