Resolves: fdo#75307 discard invalid user data

Change-Id: Id39b51c344004e02d3d5a281ba98721b944468c3